--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ notes.*
 .vite/
 
 node_modules/
+./code/html-css-final-project/update.css
+./code/html-css-final-project/stylessd.css 
+./code/html-css-final-project/styles.css
+
