add name as author

--- a/code/my-npm-project/package.json
+++ b/code/my-npm-project/package.json
@@ -7,7 +7,7 @@
     "start": "node --watch app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Michael",
   "license": "ISC",
   "description": "",
   "dependencies": {
