--- a/code/my-npm-project/package.json
+++ b/code/my-npm-project/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch app.js"
+    "dev": "node --watch app.js"
   },
   "keywords": [],
   "author": "Michael",
