--- a/code/server/server-assignment-2/package.json
+++ b/code/server/server-assignment-2/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "start": "node --watch app.js"
   },
   "keywords": [],
@@ -13,5 +13,9 @@
   "type": "module",
   "dependencies": {
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "supertest": "^7.1.1",
+    "vitest": "^3.2.3"
   }
 }
