modified:   .gitignore         modified:   app.js         modified:   controllers/posts.js         modified:   controllers/users.js         modified:   db.js         modified:   middlewares/tokenValidation.js         modified:   models/Post.js         modified:   models/User.js         modified:   package-lock.json         modified:   package.json

--- a/code/db-final-project/.gitignore
+++ b/code/db-final-project/.gitignore
@@ -1,17 +1,4 @@
-# Environment variables
-.env
-
-# Node modules
 node_modules/
-
-# OS files
+.env
 .DS_Store
-Thumbs.db
-
-# Build output
-dist/
-build/
-
-# Editor folders
-.vscode/
-.idea/
+package-lock.json
